// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`enum > enum members are listed > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                             Default       Environment (1)
                                                                         
  foo      apple | dolphin | cab             REQUIRED     ✓              
                                                                         
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`enum > enum members are listed > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                             [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                         
  [1m[32mfoo[39m[22m      [32mapple[39m[33m | [39m[32mdolphin[39m[33m | [39m[32mcab[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
                                                                         
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`enum > optional enum members are listed > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                             Default       Environment (1)
                                                                         
  foo      apple | dolphin | cab            undefined     ✓              
                                                                         
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`enum > optional enum members are listed > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                             [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                         
  [32mfoo[39m      [32mapple[39m[33m | [39m[32mdolphin[39m[33m | [39m[32mcab[39m            [34mundefined[39m     [34m✓[39m              
                                                                         
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`enum > when there are many members they wrap > monochrome 1`] = `
"
PARAMETERS
                                                                                
  Name     Type                                                Default       Environment (1)
                                                                                            
  foo      apple | baby | cannabis | dinosaur |                 REQUIRED     ✓              
           elephant | fanna | goat | house | island                                         
           | jake | kilomanjara                                                             
                                                                                            
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`enum > when there are many members they wrap > polychrome 1`] = `
"
PARAMETERS
                                                                                
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                                                [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                                            
  [1m[32mfoo[39m[22m      [32mapple[39m[33m | [39m[32mbaby[39m[33m | [39m[32mcannabis[39m[33m | [39m[32mdinosaur[39m[33m |                [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
           [39m[32melephant[39m[33m | [39m[32mfanna[39m[33m | [39m[32mgoat[39m[33m | [39m[32mhouse[39m[33m | [39m[32misland[39m[33m                                         
           | [39m[32mjake[39m[33m | [39m[32mkilomanjara[39m                                                             
                                                                                            
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`enum > when there is only one enum member it is prefixed with "enum:" to avoid confusion of it looking like the name of a kind of type > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                    Default       Environment (1)
                                                                
  foo      apple (enum)             REQUIRED     ✓              
                                                                
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`enum > when there is only one enum member it is prefixed with "enum:" to avoid confusion of it looking like the name of a kind of type > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                    [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                
  [1m[32mfoo[39m[22m      [32mapple[39m [2m[90m(enum)[39m[22m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
                                                                
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`enums do not mess up alignment when they are widest line in the column > monochrome 1`] = `
"
PARAMETERS
                                                                               
  Name     Type                                               Default       Environment (1)
                                                                                           
  foo      a | b | c | d | e | f | g | h | i | j |             REQUIRED     ✓              
           k | l | m | n | o | p | q | r | s | t |                                         
           u | v | w | x | y | z                                                           
                                                                                           
  bar      string                                             undefined     ✓              
                                                                                           
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`enums do not mess up alignment when they are widest line in the column > polychrome 1`] = `
"
PARAMETERS
                                                                               
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                                               [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                                           
  [1m[32mfoo[39m[22m      [32ma[39m[33m | [39m[32mb[39m[33m | [39m[32mc[39m[33m | [39m[32md[39m[33m | [39m[32me[39m[33m | [39m[32mf[39m[33m | [39m[32mg[39m[33m | [39m[32mh[39m[33m | [39m[32mi[39m[33m | [39m[32mj[39m[33m |            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
           [39m[32mk[39m[33m | [39m[32ml[39m[33m | [39m[32mm[39m[33m | [39m[32mn[39m[33m | [39m[32mo[39m[33m | [39m[32mp[39m[33m | [39m[32mq[39m[33m | [39m[32mr[39m[33m | [39m[32ms[39m[33m | [39m[32mt[39m[33m |                                         
           [39m[32mu[39m[33m | [39m[32mv[39m[33m | [39m[32mw[39m[33m | [39m[32mx[39m[33m | [39m[32my[39m[33m | [39m[32mz[39m                                                           
                                                                                           
  [32mbar[39m      [32mstring[39m                                             [34mundefined[39m     [34m✓[39m              
                                                                                           
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`environment > when environment has custom prefix it is displayed > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  bar      string             REQUIRED     ✓              
                                                          
  foo      string             REQUIRED     ✓ MOO_FOO      
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line
      arguments take precedence. Environment variable names are snake cased     
      versions of the parameter name (or its aliases), case insensitive. By     
      default they must be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case     
      insensitive), though some parameters deviate (shown in docs). Examples:   
        → CLI_PARAMETER_BAR=\\"...\\"                                               
        → MOO_FOO=\\"...\\"                                                         
"
`;

exports[`environment > when environment has custom prefix it is displayed > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [1m[32mbar[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
                                                          
  [1m[32mfoo[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m [2m[90mMOO_FOO[39m[22m      
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line[39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased     [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. By     [39m[22m
  [2m[90m    default they must be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case     [39m[22m
  [2m[90m    insensitive), though some parameters deviate (shown in docs). Examples:   [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                               [39m[22m
  [2m[90m      → [34mMOO_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                         [39m[22m
"
`;

exports[`environment > when environment has multiple custom prefix they are displayed > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)    
                                                              
  bar      string             REQUIRED     ✓                  
                                                              
  foo      string             REQUIRED     ✓ MOO_FOO | BOO_FOO
                                                              
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line
      arguments take precedence. Environment variable names are snake cased     
      versions of the parameter name (or its aliases), case insensitive. By     
      default they must be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case     
      insensitive), though some parameters deviate (shown in docs). Examples:   
        → CLI_PARAMETER_BAR=\\"...\\"                                               
        → MOO_FOO=\\"...\\"                                                         
"
`;

exports[`environment > when environment has multiple custom prefix they are displayed > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m    
                                                              
  [1m[32mbar[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m                  
                                                              
  [1m[32mfoo[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m [2m[90mMOO_FOO | BOO_FOO[39m[22m
                                                              
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line[39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased     [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. By     [39m[22m
  [2m[90m    default they must be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case     [39m[22m
  [2m[90m    insensitive), though some parameters deviate (shown in docs). Examples:   [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                               [39m[22m
  [2m[90m      → [34mMOO_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                         [39m[22m
"
`;

exports[`environment > when environment has no prefix it is displayed > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  bar      string             REQUIRED     ✓              
                                                          
  foo      string             REQUIRED     ✓ FOO          
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
        → FOO=\\"...\\"                                                               
"
`;

exports[`environment > when environment has no prefix it is displayed > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [1m[32mbar[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
                                                          
  [1m[32mfoo[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m [2m[90mFOO[39m[22m          
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m      → [32mFOO[39m[90m=\\"...\\"                                                               [39m[22m
"
`;

exports[`environment > when environment is disabled for one parameter it has X indicating that > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  bar      string             REQUIRED     ✓              
                                                          
  foo      string             REQUIRED     ✕              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`environment > when environment is disabled for one parameter it has X indicating that > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [1m[32mbar[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
                                                          
  [1m[32mfoo[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [2m[90m✕[39m[22m              
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`environment > when environment is disabled then environment doc is not shown > monochrome 1`] = `
"
PARAMETERS
                            
  Name     Type              Default    
                                        
  foo      string             REQUIRED  
                                        
"
`;

exports[`environment > when environment is disabled then environment doc is not shown > polychrome 1`] = `
"
PARAMETERS
                            
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m    
                                        
  [1m[32mfoo[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m 
                                        
"
`;

exports[`environment > when environment is enabled it shows as the last column > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  foo      string             REQUIRED     ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`environment > when environment is enabled it shows as the last column > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [1m[32mfoo[39m[22m      [32mstring[39m            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`exclusive > default > shows the group default > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name        Type            Default           Environment (1)
                                                               
  ┌─foo (2)                   bar@bar_default
  ◒ bar       string          –                 ✓              
  │ b                                                          
  ◒ baz       string          –                 ✓              
  │ z                                                          
  └─       
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAZ=\\"...\\"                                                 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
  (2) This is a set of mutually exclusive parameters. Only one can be provided at
      a time. If more than one is provided, execution will fail with an input    
      error.                                                                     
"
`;

exports[`exclusive > default > shows the group default > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m        [4m[90mType[39m[24m            [4m[90mDefault[39m[24m           [4m[90mEnvironment (1)[39m[24m
                                                               
  [2m[90m┌[39m[22m[2m[90m─foo (2)[39m[22m                   bar@bar_default
  [33m◒ [39m[32mbar[39m       [32mstring[39m          [2m[90m–[39m[22m                 [34m✓[39m              
  [2m[90m│ [39m[22m[2m[90mb[39m[22m                                                          
  [33m◒ [39m[32mbaz[39m       [32mstring[39m          [2m[90m–[39m[22m                 [34m✓[39m              
  [2m[90m│ [39m[22m[2m[90mz[39m[22m                                                          
  [2m[90m└[39m[22m[2m[90m─[39m[22m       
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAZ[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m(2) This is a set of mutually exclusive parameters. Only one can be provided at[39m[22m
  [2m[90m    a time. If more than one is provided, execution will fail with an input    [39m[22m
  [2m[90m    error.                                                                     [39m[22m
"
`;

exports[`exclusive > default with long value > shows the group default > monochrome 1`] = `
"
PARAMETERS
                                                                       
  Name        Type            Default                               Environment (1)
                                                                                   
  ┌─foo (2)                   bar@bar_defaulttttttttttttttttttttt
  ◒ bar       string          –                                     ✓              
  │ b                                                                              
  ◒ baz       string          –                                     ✓              
  │ z                                                                              
  └─       
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAZ=\\"...\\"                                                 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
  (2) This is a set of mutually exclusive parameters. Only one can be provided at
      a time. If more than one is provided, execution will fail with an input    
      error.                                                                     
"
`;

exports[`exclusive > default with long value > shows the group default > polychrome 1`] = `
"
PARAMETERS
                                                                       
  [4m[90mName[39m[24m        [4m[90mType[39m[24m            [4m[90mDefault[39m[24m                               [4m[90mEnvironment (1)[39m[24m
                                                                                   
  [2m[90m┌[39m[22m[2m[90m─foo (2)[39m[22m                   bar@bar_defaulttttttttttttttttttttt
  [33m◒ [39m[32mbar[39m       [32mstring[39m          [2m[90m–[39m[22m                                     [34m✓[39m              
  [2m[90m│ [39m[22m[2m[90mb[39m[22m                                                                              
  [33m◒ [39m[32mbaz[39m       [32mstring[39m          [2m[90m–[39m[22m                                     [34m✓[39m              
  [2m[90m│ [39m[22m[2m[90mz[39m[22m                                                                              
  [2m[90m└[39m[22m[2m[90m─[39m[22m       
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAZ[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m(2) This is a set of mutually exclusive parameters. Only one can be provided at[39m[22m
  [2m[90m    a time. If more than one is provided, execution will fail with an input    [39m[22m
  [2m[90m    error.                                                                     [39m[22m
"
`;

exports[`exclusive > optional > shows exclusive parameters as a group > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name        Type            Default       Environment (1)
                                                           
  ┌─foo (2)                   undefined  
  ◒ bar       string          –             ✓              
  │ b                                                      
  ◒ baz       string          –             ✓              
  │ z                                                      
  └─       
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
        → CLI_PARAMETER_BAZ=\\"...\\"                                                 
  (2) This is a set of mutually exclusive parameters. Only one can be provided at
      a time. If more than one is provided, execution will fail with an input    
      error.                                                                     
"
`;

exports[`exclusive > optional > shows exclusive parameters as a group > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m        [4m[90mType[39m[24m            [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                           
  [2m[90m┌[39m[22m[2m[90m─foo (2)[39m[22m                   undefined  
  [33m◒ [39m[32mbar[39m       [32mstring[39m          [2m[90m–[39m[22m             [34m✓[39m              
  [2m[90m│ [39m[22m[2m[90mb[39m[22m                                                      
  [33m◒ [39m[32mbaz[39m       [32mstring[39m          [2m[90m–[39m[22m             [34m✓[39m              
  [2m[90m│ [39m[22m[2m[90mz[39m[22m                                                      
  [2m[90m└[39m[22m[2m[90m─[39m[22m       
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAZ[39m[90m=\\"...\\"                                                 [39m[22m
  [2m[90m(2) This is a set of mutually exclusive parameters. Only one can be provided at[39m[22m
  [2m[90m    a time. If more than one is provided, execution will fail with an input    [39m[22m
  [2m[90m    error.                                                                     [39m[22m
"
`;

exports[`exclusive > with environment disabled > shows the group default > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name        Type            Default        
                                             
  ┌─foo (2)                   bar@bar_default
  ◒ bar       string          –              
  │ b                                        
  ◒ baz       string          –              
  │ z                                        
  └─       
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) This is a set of mutually exclusive parameters. Only one can be provided at
      a time. If more than one is provided, execution will fail with an input    
      error.                                                                     
"
`;

exports[`exclusive > with environment disabled > shows the group default > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m        [4m[90mType[39m[24m            [4m[90mDefault[39m[24m        
                                             
  [2m[90m┌[39m[22m[2m[90m─foo (2)[39m[22m                   bar@bar_default
  [33m◒ [39m[32mbar[39m       [32mstring[39m          [2m[90m–[39m[22m              
  [2m[90m│ [39m[22m[2m[90mb[39m[22m                                        
  [33m◒ [39m[32mbaz[39m       [32mstring[39m          [2m[90m–[39m[22m              
  [2m[90m│ [39m[22m[2m[90mz[39m[22m                                        
  [2m[90m└[39m[22m[2m[90m─[39m[22m       
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) This is a set of mutually exclusive parameters. Only one can be provided at[39m[22m
  [2m[90m    a time. If more than one is provided, execution will fail with an input    [39m[22m
  [2m[90m    error.                                                                     [39m[22m
"
`;

exports[`if command has description it is shown > monochrome 1`] = `
"
ABOUT
         
  Blah blah blah                                                 

PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  foo      string            undefined     ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`if command has description it is shown > polychrome 1`] = `
"
ABOUT
         
  Blah blah blah                                                 

PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [32mfoo[39m      [32mstring[39m            [34mundefined[39m     [34m✓[39m              
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`if parameter has default it is shown > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  foo      string            bar           ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`if parameter has default it is shown > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [32mfoo[39m      [32mstring[39m            [34mbar[39m           [34m✓[39m              
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`if parameter has description it is shown > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type/Description           Default       Environment (1)
                                                                   
  a        string                     undefined     ✓              
  a        Blah blah blah.                                         
                                                                   
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_A=\\"...\\"                                                   
"
`;

exports[`if parameter has description it is shown > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType/Description[39m[24m           [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                   
  [32ma[39m        [32mstring[39m                     [34mundefined[39m     [34m✓[39m              
  [2m[90ma[39m[22m        Blah blah blah.                                         
                                                                   
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mA[39m[90m=\\"...\\"                                                   [39m[22m
"
`;

exports[`if parameter is optional without default then its default shows up as "undefined" > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  foo      string            undefined     ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`if parameter is optional without default then its default shows up as "undefined" > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [32mfoo[39m      [32mstring[39m            [34mundefined[39m     [34m✓[39m              
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`if there is an error trying to get default then a nice message is shown > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default                  Environment (1)
                                                                     
  foo      string            Error trying to render   ✓              
                             this default: whoops                    
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`if there is an error trying to get default then a nice message is shown > monochrome 2`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default                  Environment (1)
                                                                     
  foo      string            Error trying to render   ✓              
                             this default: whoops                    
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
"
`;

exports[`if there is an error trying to get default then a nice message is shown > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m                  [4m[90mEnvironment (1)[39m[24m
                                                                     
  [32mfoo[39m      [32mstring[39m            [1m[31mError trying to render   [34m✓[39m              
                             this default: whoops[39m[22m                    
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`if there is an error trying to get default then a nice message is shown > polychrome 2`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m                  [4m[90mEnvironment (1)[39m[24m
                                                                     
  [32mfoo[39m      [32mstring[39m            [1m[31mError trying to render   [34m✓[39m              
                             this default: whoops[39m[22m                    
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`if there is optional param it is shown > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  a        string            undefined     ✓              
  a                                                       
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_A=\\"...\\"                                                   
"
`;

exports[`if there is optional param it is shown > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m              [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                          
  [32ma[39m        [32mstring[39m            [34mundefined[39m     [34m✓[39m              
  [2m[90ma[39m[22m                                                       
                                                          
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mA[39m[90m=\\"...\\"                                                   [39m[22m
"
`;

exports[`long description wraps within column > monochrome 1`] = `
"
PARAMETERS
                                                                            
  Name     Type/Description                                Default       Environment (1)
                                                                                        
  a        string                                          undefined     ✓              
  a        Blah blah blah. Blah blah blah. Blah                                         
           blah blah.                                                                   
                                                                                        
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_A=\\"...\\"                                                   
"
`;

exports[`long description wraps within column > polychrome 1`] = `
"
PARAMETERS
                                                                            
  [4m[90mName[39m[24m     [4m[90mType/Description[39m[24m                                [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                                        
  [32ma[39m        [32mstring[39m                                          [34mundefined[39m     [34m✓[39m              
  [2m[90ma[39m[22m        Blah blah blah. Blah blah blah. Blah                                         
           blah blah.                                                                   
                                                                                        
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mA[39m[90m=\\"...\\"                                                   [39m[22m
"
`;

exports[`union parameter > condensed pipe style > used when no descriptions given for anything > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                       Default       Environment (1)
                                                                   
  bar      string | number             REQUIRED     ✓              
  b                                                                
                                                                   
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > condensed pipe style > used when no descriptions given for anything > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                       [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                   
  [1m[32mbar[39m[22m      string | number            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
  [2m[90mb[39m[22m                                                                
                                                                   
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`union parameter > condensed pipe style > used when only overall description given > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type/Description           Default       Environment (1)
                                                                   
  bar      string | number             REQUIRED     ✓              
  b        Blah blah blah.                                         
                                                                   
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > condensed pipe style > used when only overall description given > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType/Description[39m[24m           [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                   
  [1m[32mbar[39m[22m      string | number            [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
  [2m[90mb[39m[22m        Blah blah blah.                                         
                                                                   
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`union parameter > shows default as undefined when overall optional > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                                Default       Environment (1)
                                                                            
  bar      ┌─union                             undefined     ✓              
  b        ◒ string                                                         
           │ Blah blah blah string.                                         
           │                                                                
           ◒ number                                                         
           │ Blah blah blah number.                                         
           └─                                                               
                                                                            
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > shows default as undefined when overall optional > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                                [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                            
  [32mbar[39m      [2m[90m┌─union[39m[22m                             [34mundefined[39m     [34m✓[39m              
  [2m[90mb[39m[22m        [33m◒[39m [32mstring[39m                                                         
           [2m[90m│[39m[22m Blah blah blah string.                                         
           [2m[90m│[39m[22m                                                                
           [33m◒[39m [32mnumber[39m                                                         
           [2m[90m│[39m[22m Blah blah blah number.                                         
           [2m[90m└─[39m[22m                                                               
                                                                            
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`union parameter > shows default when overall has a default > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                                Default       Environment (1)
                                                                            
  bar      ┌─union                             1             ✓              
  b        ◒ string                                                         
           │ Blah blah blah string.                                         
           │                                                                
           ◒ number                                                         
           │ Blah blah blah number.                                         
           └─                                                               
                                                                            
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > shows default when overall has a default > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                                [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                            
  [32mbar[39m      [2m[90m┌─union[39m[22m                             [34m1[39m             [34m✓[39m              
  [2m[90mb[39m[22m        [33m◒[39m [32mstring[39m                                                         
           [2m[90m│[39m[22m Blah blah blah string.                                         
           [2m[90m│[39m[22m                                                                
           [33m◒[39m [32mnumber[39m                                                         
           [2m[90m│[39m[22m Blah blah blah number.                                         
           [2m[90m└─[39m[22m                                                               
                                                                            
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`union parameter > verbose style > shows member on each line if at least one has description > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                                Default       Environment (1)
                                                                            
  bar      ┌─union                              REQUIRED     ✓              
  b        ◒ string                                                         
           │                                                                
           ◒ number                                                         
           │ Blah blah blah number.                                         
           └─                                                               
                                                                            
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > verbose style > shows member on each line if at least one has description > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                                [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                            
  [1m[32mbar[39m[22m      [2m[90m┌─union[39m[22m                             [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
  [2m[90mb[39m[22m        [33m◒[39m [32mstring[39m                                                         
           [2m[90m│[39m[22m                                                                
           [33m◒[39m [32mnumber[39m                                                         
           [2m[90m│[39m[22m Blah blah blah number.                                         
           [2m[90m└─[39m[22m                                                               
                                                                            
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`union parameter > verbose style > shows member on each line if each has description > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type                                Default       Environment (1)
                                                                            
  bar      ┌─union                              REQUIRED     ✓              
  b        ◒ string                                                         
           │ Blah blah blah string.                                         
           │                                                                
           ◒ number                                                         
           │ Blah blah blah number.                                         
           └─                                                               
                                                                            
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > verbose style > shows member on each line if each has description > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType[39m[24m                                [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                            
  [1m[32mbar[39m[22m      [2m[90m┌─union[39m[22m                             [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
  [2m[90mb[39m[22m        [33m◒[39m [32mstring[39m                                                         
           [2m[90m│[39m[22m Blah blah blah string.                                         
           [2m[90m│[39m[22m                                                                
           [33m◒[39m [32mnumber[39m                                                         
           [2m[90m│[39m[22m Blah blah blah number.                                         
           [2m[90m└─[39m[22m                                                               
                                                                            
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;

exports[`union parameter > verbose style > shows overall description above all members when members also have descriptions > monochrome 1`] = `
"
PARAMETERS
                                                                      
  Name     Type/Description                     Default       Environment (1)
                                                                             
  bar      ┌─union                               REQUIRED     ✓              
  b        │ Blah blah blah overall.                                         
           │                                                                 
           ◒ string                                                          
           │ Blah blah blah string.                                          
           │                                                                 
           ◒ number                                                          
           │ Blah blah blah number.                                          
           └─                                                                
                                                                             
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
"
`;

exports[`union parameter > verbose style > shows overall description above all members when members also have descriptions > polychrome 1`] = `
"
PARAMETERS
                                                                      
  [4m[90mName[39m[24m     [4m[90mType/Description[39m[24m                     [4m[90mDefault[39m[24m       [4m[90mEnvironment (1)[39m[24m
                                                                             
  [1m[32mbar[39m[22m      [2m[90m┌─union[39m[22m                              [1m[30m[101m REQUIRED [49m[39m[22m    [34m✓[39m              
  [2m[90mb[39m[22m        [2m[90m│[39m[22m Blah blah blah overall.                                         
           [2m[90m│[39m[22m                                                                 
           [33m◒[39m [32mstring[39m                                                          
           [2m[90m│[39m[22m Blah blah blah string.                                          
           [2m[90m│[39m[22m                                                                 
           [33m◒[39m [32mnumber[39m                                                          
           [2m[90m│[39m[22m Blah blah blah number.                                          
           [2m[90m└─[39m[22m                                                                
                                                                             
  [2m[90m[39m[22m
  [2m[90mNOTES                                                                           [39m[22m
  [2m[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
  [2m[90m(1) Parameters can be passed arguments via environment variables. Command line  [39m[22m
  [2m[90m    arguments take precedence. Environment variable names are snake cased       [39m[22m
  [2m[90m    versions of the parameter name (or its aliases), case insensitive. They must[39m[22m
  [2m[90m    be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples: [39m[22m
  [2m[90m      → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                 [39m[22m
"
`;
